--- a/design_dance/Properties/Resources.resx
+++ b/design_dance/Properties/Resources.resx
@@ -130,13 +130,16 @@
   <data name="icon_itb2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_itb1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_lpdp1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_lpdp1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_itb1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_itb1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bg_login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bg_login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icon_lpdp1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icon_lpdp1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bg_login1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bg_login1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
