--- a/design_dance/f_signin.resx
+++ b/design_dance/f_signin.resx
@@ -8110,7 +8110,7 @@
         d6yRn1PPz2jG/x/bdDwesfv+zwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="ic_signin.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAGgsAABDFCAYAAACpyQhjAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
         DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKNWlDQ1BzUkdCIElFQzYxOTY2LTIuMQAA
