--- a/design_dance/f_mainAdmin.resx
+++ b/design_dance/f_mainAdmin.resx
@@ -18701,98 +18701,96 @@
   </data>
   <data name="b_model.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAGzUlEQVRYR8WXa1CTVx7G6U7baaftutvbbj/s7M7stDttsWOntbuW1tI67egiVZCAJKixRSrMDjeL
-        whZogFq0dQFL0UpbAQUilwBFwk1sFVkQDEKAXIREQsItISbCOGIE8vS8L31f3+Cx+mn3w+/lnD/n/zzP
-        OSeXiReA/ysek1L/V548FvSGqCjQJ+Q2AlatF679NUQi0eMBoVvfoCESSZYL1/KDEyIfg2LzalTdgWOB
-        ryP1reXbZb6+9wsFhASGhT0TItk+Fbr1Q4i3hVPZKApd8JVKH+J62EdxoE8SzZSjIvhN5PqtRPJb3vhk
-        tXcI17wUkWRbK82UIyBYgtTY8AVhD/sgu/uKZnx80+uQB/ngsP9r2PfuisUAvssThQJCgsXbDDTjzVs+
-        wIagUGwNk0BflnpT2MM+aAFKNvngEDFmOErmKcT8bgFEEqleaBoskZIjF8Nvowjh0i0wKNJwtXGvS9jD
-        PrgApWS3hQGrUBDwD+StX4muL8NxKikE2u/jWfO7BfDbGFS4PiCYNeQQi8WozNoFZ1MmZk7towfI3/D3
-        KOaYGdN88mJjdt2euZ1t4NAejUdL+pbp5NXezwsFhKx7f9PLeyLDxrOTdqAqexe6ipIx1fC5hw41wNd+
-        r24m5o76eP/pCwc+xGDBLr7BUpKI1t1BGMjZCUd9+oSwmYa5NPrUhQwJzsQHwFT4MathVaSy885PJXDW
-        pd8eIHvjit+ZiqNLLPIY2GqSYa9N4wMw2Ko/Zf/O1q6Du/b5G1C+6Kbhrn3ObZf7u7W5ERgmm3DW72X7
-        ppszMXIsAUNHonGlLg0WeewZyGS/4QMYy/csI+ZuJsCoPAGmogSPAPq8f+F6YySg9CaQzxEadS8CFb/H
-        9DePkcCJUH8R7qGhORiJKyfTyRV8RgLEYKQk+hU+AIPlRPS3TAh7bYpHI4dLST4IacYMJ/9GzJfBVfAg
-        ZvK8YKuMomowOBuYALFNHifAh5DH5E8q9rALB7I/Yo+eSc7MXUp/ivFzgOIPQNmjmKv4K2vOMCnfwfac
-        TxGzp9masIkP4FCmG4SeHgHMJ6K9x07ETjsbMtg7a0sMhrl4MdD1Osk8FE8Twz8ClU8A5b8lxo8A9SsB
-        TR5mle/zAcaLpRMOZRqG8mPQGLEWfQcWAxHcV04mvyf09AjAYJbHvTlaFmdhQnCpybHNXKtYL0HlU4ML
-        Nc8Cp9cB56OIcS4w2sriHlLgRmMIrpW80G0uDlw5VhajuaKU8Rrk7l326pSwpX4eEw7VkYgHyHXMTVYl
-        wlqT5IAq4gGmPq0uXetUFWG86Qimzhbx5s7OMowqD8F1qREuQ0Pyoo7XfaPy2GHmSm3VSQuWRtnjQg8O
-        fuAr++mhNfGqlKA0tX7rvgFXS0EW+2ot/64AO/6jm4/O6Zk0dFTaJ88cwkh1Duxtx/kAVy+UY6TmIBwd
-        ctjUNTM7Mjtm/P7dM1fx/dF5RuPHwqyFyBydfWeOviUyR58sLRj2/DZc83H3S+/t7jZI9w+ALGRJyu1E
-        z3EZYg72sfPy6p8woy5hGa0/jGu91XyAm4ZmGMu+YMfXtQpUVCjxbkI328toMFqc7i/oSZCX2ACr4tof
-        fidONUh2vXSRB18WdmG6t5QNMD98mjfnmL/cwgdIz/sRQTI1VUfAYFyW5WGvd+IvyDYk99IW3EbGdxcx
-        zQQwtcA12AT7ueOYuajATLeCD5Kadw4hGYundjeisnUyL994VWvoZ/3UBTQ6Tisxe+kHuM1n0JERgbaU
-        7eyLjzG3ak4jOP3ezFkO6lu93o5XOaT7NfQFFGJyNehvrYFrqI7fNYNd2wLpXhW151dwePnGqTIDUtU3
-        IrK02Jmtuyf2y4fR3HzWeV1XhTljI3raz83tzh9yhx/QuojojXvkWlSOLpN/G94Ler3+sZbOkeKqViua
-        z4/f5N4VpzrH55lah3qy8/Lly3+m9d4JapGGWq1Zo9MZxzVDNjBmDDp1D/Tqi7fmRgesVse8yTT+y4fR
-        3aEWl6JWa70HBi65iDistqv4oW3R8OR/rahrXxzXnLNi0noVU1OLkBBimtZSqMWl9PXpus3mCV68vc+O
-        pi4bDtdaWJrJuE1t5//PMDFhnyW9d/wNwUEtCunp0f2FBIDN5sTYmO2WgdWJgoZRFmbM1YVrhofH19I0
-        hVCLQvr7dYFa7RAraDSaeXEbYU/+IHYdvsReC1c3GEb4MTm1r2maQqhFIWT3y8n9zzL3LwzQq5/i38+d
-        /bd2zQVgTsxsHrvjrygOanEpKpVxmUYzuMJoNIlNJss/GTr7RkS1Z4cjGLp6R4K5OrfGYBj7E01rKdTi
-        /w54/QyGKHaJsfFa4gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAbNSURBVFhHxZdr
+        UJNXHsbpTttpp+2629tuP+zszuy0O22xY6e1u5bW0jrt6CJVkIAkqLFFKswON4vCFmiAWrR1AUvRSlsB
+        BSKXAEXCTWwVWRAMQoBchERCwi0hJsI4YgTy9LwvfV/f4LH6affD7+WcP+f/PM85J5eJF4D/Kx6TUv9X
+        njwW9IaoKNAn5DYCVq0Xrv01RCLR4wGhW9+gIRJJlgvX8oMTIh+DYvNqVN2BY4GvI/Wt5dtlvr73CwWE
+        BIaFPRMi2T4VuvVDiLeFU9koCl3wlUof4nrYR3GgTxLNlKMi+E3k+q1E8lve+GS1dwjXvBSRZFsrzZQj
+        IFiC1NjwBWEP+yC7+4pmfHzT65AH+eCw/2vY9+6KxQC+yxOFAkKCxdsMNOPNWz7AhqBQbA2TQF+WelPY
+        wz5oAUo2+eAQMWY4SuYpxPxuAUQSqV5oGiyRkiMXw2+jCOHSLTAo0nC1ca9L2MM+uAClZLeFAatQEPAP
+        5K1fia4vw3EqKQTa7+NZ87sF8NsYVLg+IJg15BCLxajM2gVnUyZmTu2jB8jf8Pco5pgZ03zyYmN23Z65
+        nW3g0B6NR0v6lunk1d7PCwWErHt/08t7IsPGs5N2oCp7F7qKkjHV8LmHDjXA136vbibmjvp4/+kLBz7E
+        YMEuvsFSkojW3UEYyNkJR336hLCZhrk0+tSFDAnOxAfAVPgxq2FVpLLzzk8lcNal3x4ge+OK35mKo0ss
+        8hjYapJhr03jAzDYqj9l/87WroO79vkbUL7opuGufc5tl/u7tbkRGCabcNbvZfummzMxciwBQ0eicaUu
+        DRZ57BnIZL/hAxjL9ywj5m4mwKg8AaaiBI8A+rx/4XpjJKD0JpDPERp1LwIVv8f0N4+RwIlQfxHuoaE5
+        GIkrJ9PJFXxGAsRgpCT6FT4Ag+VE9LdMCHttikcjh0tJPghpxgwn/0bMl8FV8CBm8rxgq4yiajA4G5gA
+        sU0eJ8CHkMfkTyr2sAsHsj9ij55JzsxdSn+K8XOA4g9A2aOYq/gra84wKd/B9pxPEbOn2ZqwiQ/gUKYb
+        hJ4eAcwnor3HTsROOxsy2DtrSwyGuXgx0PU6yTwUTxPDPwKVTwDlvyXGjwD1KwFNHmaV7/MBxoulEw5l
+        GobyY9AYsRZ9BxYDEdxXTia/J/T0CMBglse9OVoWZ2FCcKnJsc1cq1gvQeVTgws1zwKn1wHno4hxLjDa
+        yuIeUuBGYwiulbzQbS4OXDlWFqO5opTxGuTuXfbqlLClfh4TDtWRiAfIdcxNViXCWpPkgCriAaY+rS5d
+        61QVYbzpCKbOFvHmzs4yjCoPwXWpES5DQ/Kijtd9o/LYYeZKbdVJC5ZG2eNCDw5+4Cv76aE18aqUoDS1
+        fuu+AVdLQRb7ai3/rgA7/qObj87pmTR0VNonzxzCSHUO7G3H+QBXL5RjpOYgHB1y2NQ1MzsyO2b8/t0z
+        V/H90XlG48fCrIXIHJ19Z46+JTJHnywtGPb8NlzzcfdL7+3uNkj3D4AsZEnK7UTPcRliDvax8/LqnzCj
+        LmEZrT+Ma73VfICbhmYYy75gx9e1ClRUKPFuQjfby2gwWpzuL+hJkJfYAKvi2h9+J041SHa9dJEHXxZ2
+        Ybq3lA0wP3yaN+eYv9zCB0jP+xFBMjVVR8BgXJblYa934i/INiT30hbcRsZ3FzHNBDC1wDXYBPu545i5
+        qMBMt4IPkpp3DiEZi6d2N6KydTIv33hVa+hn/dQFNDpOKzF76Qe4zWfQkRGBtpTt7IuPMbdqTiM4/d7M
+        WQ7qW73ejlc5pPs19AUUYnI16G+tgWuojt81g13bAuleFbXnV3B4+capMgNS1TcisrTYma27J/bLh9Hc
+        fNZ5XVeFOWMjetrPze3OH3KHH9C6iOiNe+RaVI4uk38b3gt6vf6xls6R4qpWK5rPj9/k3hWnOsfnmVqH
+        erLz8uXLf6b13glqkYZarVmj0xnHNUM2MGYMOnUP9OqLt+ZGB6xWx7zJNP7Lh9HdoRaXolZrvQcGLrmI
+        OKy2q/ihbdHw5H+tqGtfHNecs2LSehVTU4uQEGKa1lKoxaX09em6zeYJXry9z46mLhsO11pYmsm4TW3n
+        /88wMWGfJb13/A3BQS0K6enR/YUEgM3mxNiY7ZaB1YmChlEWZszVhWuGh8fX0jSFUItC+vt1gVrtECto
+        NJp5cRthT/4gdh2+xF4LVzcYRvgxObWvaZpCqEUhZPfLyf3PMvcvDNCrn+Lfz539t3bNBWBOzGweu+Ov
+        KA5qcSkqlXGZRjO4wmg0iU0myz8ZOvtGRLVnhyMYunpHgrk6t8ZgGPsTTWsp1OL/Dnj9DIYodomx8Vri
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="b_rekam.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAFU0lEQVRYR71XW0zbVRgnixpjjNGYLIZS3IOvvvhgYpZsXvaEAaPGITB0F2RsRldkZVy7IgOGD5vx
-        xUtmdIosW9yQoW4tjlsvsLFxtasD7CyF0tI6LibG1LjP8/vo+VvLafNXEx9+5fy/+/nO933nkEFE/xoP
-        WPKKABVPL5TEdNg0evz+bE/rM9ne1lc3nthjA7AGDTyVTjooicnYdNN6t9HTUpZ9/Wi3QMw40UzG0SP0
-        0Kn9DKxBAw8ykIWOylYylESJDLJu4N1db501jh+hLHc9GS4dokybmbHx4z0M+Q0eZCALHejChsq2hJII
-        IJ0Pe1svZE82k8FZJx3EDAO1M0ZX/ZlMd/3uBxuerwWwBg08yLCs0IEubKQ7GiUxy9PyiEjllHGkkTK7
-        KynTXklwgN30v7XL6DIXveE8WGzqMhdVAlgDjoqi/aUflt7JAQod6MIGbMGmytc6AhcZFIata6ntqV4x
-        OC1Pgeeu2um9bNlLqeCqKLzduWPbs5CFDnRhA7ZgU5WJpA/rBqSMd4409te4M3qtd4DnNhe+pHIq4TIX
-        U3dJDnUUbPFo9oQubMAWbMJ2ck1oC4ALTpwbp11EL50DSLHK8VBtCTlM+dS7L5e+KnySOgq3RhNtwgZn
-        QtiEbfj4G18u0DaoXC44cX4y7RIOU0EBnA3Vv0aDNbvJfegVdty3L4+uWYrJXpZD517esi4AgI+DbYrC
-        FD4SW1QTQu+ifThdoogkXaKnLG8znEn0v/4cDdcW0VxbFa12H6VrTTtlAJFkXYALE7aFD/iSdE0AAyTe
-        57FUvTvauMPsfa+EwmcttGJrYceJiJ5voPHjJU+rdGETtuEDvv6ii5945ccwSNDLkpmMQLupZOqjveSs
-        3k6Tx0o1x1i7qvNp4Uwdhc6a81W6QHxOIICY7AhmYI5jlKZKPzB/2rQ5cOoAAZHOBlq+2KwFsGxrZhrW
-        c6fLCbIqG9oxYGwLn6AxA5WJeQ4mplqiksRc+5vbZQD+zyuFQ6sWAJyDJgOArMoGbHMAwpfsBr5ScaPh
-        UsFc59Fqzb0nWfmqmHD+9gPvIIAVseMVe4vIQhMDaxmM2L0Vssn6sAnb8MG+hE/41h2AhAhgMtpVzwXX
-        f/BF6q94QUv/0oXGRZUOkDIAMPUcgUSgrfxRkeYl4Yy7ISQA5yITv0e7ah9X6UgojwA/eoowEQ7bpVzf
-        l5Yr0a8Pc/rD37aGHL3D21SyiUhZhHrbELAPBXI6BkK/feeaCcmi7Bv88ecORzjmGlvYpdKRSNmGAIZD
-        ukE0PT1938SE99Nx7zydGwgzfrB/IdCmfd+4eYvm5sJTgUDUkKyfdhAB6Uaxx+O5SzgfE8ZpcXGZOp1r
-        Dm2DQbIPBXkNWljwIpFlWliI/urxLN6baENLf6pRnO4ympz0Ns3M+Nk44ByLUJdrkT6zzdNJAawHRiMa
-        HwgEQi6pr+syAlCZqutY7D4YDEawMzaOLMwvLNP75wMMrEEDT8qEw7f+YAd6r+O1j/UPks6RkUwRgHCw
-        RD5fgP/KXR7+ZJpqTkxp31JGfo94f3riHz1IgHhHaE8yQ2/V6snRvlXsLDGAG74o7XvXy5iYWkt/YgDf
-        +CduZ/VU/wIbup9kEqpH6WOulgGfb/bt2dlgud8fNF39frauze79ALgyFrCABp6Qadx6+dgYdKALG7wh
-        vY9SCUSLlOHcuDCRDdFG6GWuaDHVMFp5dIs1aPE+/+/PcgmcFxemqFy0T3xOcDAA5jogv8GDDGShA13V
-        TEmEkpgMtA16FwNE4P/710wFLlIxx7E73GgAZ0nQ0qU6FZREvcB1Cqh4+kAZfwK2lLJxG4aTygAAAABJ
-        RU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAVTSURBVFhHvVdb
+        TNtVGCeLGmOM0ZgshlLcg6+++GBilmxe9oQBo8YhMHQXZGxGV2RlXLsiA4YPm/HFS2Z0iixb3JChbi2O
+        Wy+wsXG1qwPsLIXS0jouJsbUuM/z++j5W8tp81cTH37l/L/7+c73feeQQUT/Gg9Y8ooAFU8vlMR02DR6
+        /P5sT+sz2d7WVzee2GMDsAYNPJVOOiiJydh003q30dNSln39aLdAzDjRTMbRI/TQqf0MrEEDDzKQhY7K
+        VjKURIkMsm7g3V1vnTWOH6Esdz0ZLh2iTJuZsfHjPQz5DR5kIAsd6MKGyraEkgggnQ97Wy9kTzaTwVkn
+        HcQMA7UzRlf9mUx3/e4HG56vBbAGDTzIsKzQgS5spDsaJTHL0/KISOWUcaSRMrsrKdNeSXCA3fS/tcvo
+        Mhe94TxYbOoyF1UCWAOOiqL9pR+W3skBCh3owgZswabK1zoCFxkUhq1rqe2pXjE4LU+B567a6b1s2Uup
+        4KoovN25Y9uzkIUOdGEDtmBTlYmkD+sGpIx3jjT217gzeq13gOc2F76kcirhMhdTd0kOdRRs8Wj2hC5s
+        wBZswnZyTWgLgAtOnBunXUQvnQNIscrxUG0JOUz51Lsvl74qfJI6CrdGE23CBmdC2IRt+PgbXy7QNqhc
+        LjhxfjLtEg5TQQGcDdW/RoM1u8l96BV23Lcvj65ZislelkPnXt6yLgCAj4NtisIUPhJbVBNC76J9OF2i
+        iCRdoqcsbzOcSfS//hwN1xbRXFsVrXYfpWtNO2UAkWRdgAsTtoUP+JJ0TQADJN7nsVS9O9q4w+x9r4TC
+        Zy20Ymthx4mInm+g8eMlT6t0YRO24QO+/qKLn3jlxzBI0MuSmYxAu6lk6qO95KzeTpPHSjXHWLuq82nh
+        TB2FzprzVbpAfE4ggJjsCGZgjmOUpko/MH/atDlw6gABkc4GWr7YrAWwbGtmGtZzp8sJsiob2jFgbAuf
+        oDEDlYl5DiamWqKSxFz7m9tlAP7PK4VDqxYAnIMmA4CsygZscwDCl+wGvlJxo+FSwVzn0WrNvSdZ+aqY
+        cP72A+8ggBWx4xV7i8hCEwNrGYzYvRWyyfqwCdvwwb6ET/jWHYCECGAy2lXPBdd/8EXqr3hBS//ShcZF
+        lQ6QMgAw9RyBRKCt/FGR5iXhjLshJADnIhO/R7tqH1fpSCiPAD96ijARDtulXN+XlivRrw9z+sPftoYc
+        vcPbVLKJSFmEetsQsA8FcjoGQr9955oJyaLsG/zx5w5HOOYaW9il0pFI2YYAhkO6QTQ9PX3fxIT303Hv
+        PJ0bCDN+sH8h0KZ937h5i+bmwlOBQNSQrJ92EAHpRrHH47lLOB8TxmlxcZk6nWsObYNBsg8FeQ1aWPAi
+        kWVaWIj+6vEs3ptoQ0t/qlGc7jKanPQ2zcz42TjgHItQl2uRPrPN00kBrAdGIxofCARCLqmv6zICUJmq
+        61jsPhgMRrAzNo4szC8s0/vnAwysQQNPyoTDt/5gB3qv47WP9Q+SzpGRTBGAcLBEPl+A/8pdHv5kmmpO
+        TGnfUkZ+j3h/euIfPUiAeEdoTzJDb9XqydG+VewsMYAbvijte9fLmJhaS39iAN/4J25n9VT/Ahu6n2QS
+        qkfpY66WAZ9v9u3Z2WC53x80Xf1+tq7N7v0AuDIWsIAGnpBp3Hr52Bh0oAsbvCG9j1IJRIuU4dy4MJEN
+        0UboZa5oMdUwWnl0izVo8T7/789yCZwXF6aoXLRPfE5wMADmOiC/wYMMZKEDXdVMSYSSmAy0DXoXA0Tg
+        //vXTAUuUjHHsTvcaABnSdDSpToVlES9wHUKqHj6QBl/AraUsnEbhpPKAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="b_regist.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAFUElEQVRYR5WWa0xTZxjH62aMyZa5T2oLOD/JootAAKPckaLJsumyrJHNyZwRFTYF29JyUVavuDiN
-        uixkl2RxOrkYy00QRKwDCiXWIRXaAmqhtcChgDAviQF9dt7jzuGc06eFffgl5/zP+z7///O+57w5Eml9
-        9mlZfbYj0HzoSdC941Oz0nF0WGLQzQcAiQCJ5I3usLAqa2hovyc+/tlkUtLUbHji4u5IaPNXsusaWGY9
-        MWeCzLoN4gC2kJAVtDn0hofD0+TkOUMCgDhAYFsBSK8qIaD5ACzrLhQ8Y56bdB+KA/SEh79PAvTxAljW
-        rIHRxETm2h0fD/Z167hnLF4BAlsLYPGvOzhkN7QCc2bMHAP00IZ1q1bBw+hoqF25EpyxsQJzglcAadV+
-        QYClxRkCc8JcAxA6IiOhPDgY+qKiBDqLV4CAW3mCALJatcCcMNcAZNlJ53ciIpiVYLeDj/c70FXI3C/5
-        cw/IalQQZDkmMCfMNUBTSAi37GQ7botWh4C+hLPxf7ZgNsg50E5CBHV6d4rSVfhyiVG3WBygc/Xqt+gA
-        I7awMKC/cdRMzHhi4lOJpEzxprRG9V5gQ+6nAY1akDXmTErbD8bKTLoYjOUdunfF5iyOhISFttDQ5Q8j
-        IoIHY2JiBERHx9Kmk8R4bP36NCouLgoUigXcZHK60SthZbakQRnGL8zHpNy6tiU7Nc+Yve2AmBb1tlxD
-        huJtbN4zuTzsv86tkJDAnaSCQdIG7UYSQHo9u4ivE2r3bn2nLW/H0/aC3eALo/pLqN2+Ya94LuFJcnIR
-        E0Au38jXBYMIAfXqfDrEi6XXVJF8vU3z1UXMlKVVkwqNuz8CfUrckzLFqgX8uc+SkiJp8xf0KuTzdYLg
-        hiWgQbM2oC77GF8zalLrMGPTgTRoUX4Ot9I3QeXWRBIAyrcnCN4Tuvtjz+XytXyNxUvwRbPqiz840/yd
-        0JaznTZOgVsZm8Gk2QKN325izLEA/kBFjL/SP9YSM9IpS6tKAY7flDB5vRDMR1K5AGUK+SKsBgYqYjTs
-        Uiy6nb+lquvk1+C6oIXRykPwT8MJAa6LWjAf3naELjsPq4GBir5wle7T2It2gTEvBaw/ZnDGXWf2QGt+
-        CrhLcsFTmZuGzfUFKmI4L2V98qg4c9pVnAXjNUcFnRPGrx6FibrjMHRZPeUs2ev1w+ILVMSgjX92FWeC
-        u0wJ3WfTYaz6MGfuqdCB/advmOvBy2qgx57EamCgIoazZN8HdICBR6X7OWOMocuqPndZZjBWAwMVfdF/
-        IUtKh3j5+NoRcJfmgfVcOlh+SANKX8CY01/DK8B+WP2Aiv5wFmeeHrqiYQw7T+4Ey6k0rvvRmu+8jvDZ
-        QEX/SOa5SrK+p/TaafL9s517qg+ewsf7BxX9caXJI9U3U/fMlRfL3KVKGNbnQPON5uryJqrud4NjITbH
-        H6joi85O+2c3zYOUvomCurYhcJaowVFxHCpbKCBah31kor/fvQOb6wtUFGMwGOZbLLZLDscjsD0cZ8wI
-        f7cYocXUy9273I/B45kAl2voJlYHAxXF0J3n9/Y6mOLD1ARUNL82vNo6DFXG19f17SPMc5aBAfchrJYY
-        VOTT3d29lO7+BUWNc8Xv9oxB2z0PnNU74Vy5E8zWUbDTK8MPMDw8No3VE4OKfCwW+2artY8pSu/vjAG9
-        EufrXVB6c0YTj6Gvo7CafFCRj8Vi1bLLf//+AFfc4RqHjDM2UBX1ADUyE4A/pr9/MA+ryQcV+dy9a1vR
-        1dVjcrtHnj944HxJb8UUwWAems75pQcId6zUNKuzY+jxIxRFLcFqzgCSfwHTRgpSbmYl8wAAAABJRU5E
-        rkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAVQSURBVFhHlZZr
+        TFNnGMfrZozJlrlPags4P8mii0AAo9yRosmy6bKskc3JnBEVNgXb0nJRVq+4OI26LGSXZHE6uRjLTRBE
+        rAMKJdYhFdoCaqG1wKGAMC+JAX123uPO4ZzTp4V9+CXn/M/7Pv//877nvDkSaX32aVl9tiPQfOhJ0L3j
+        U7PScXRYYtDNBwCJAInkje6wsCpraGi/Jz7+2WRS0tRseOLi7kho81ey6xpYZj0xZ4LMug3iALaQkBW0
+        OfSGh8PT5OQ5QwKAOEBgWwFIryohoPkALOsuFDxjnpt0H4oD9ISHv08C9PECWNasgdHERObaHR8P9nXr
+        uGcsXgECWwtg8a87OGQ3tAJzZswcA/TQhnWrVsHD6GioXbkSnLGxAnOCVwBp1X5BgKXFGQJzwlwDEDoi
+        I6E8OBj6oqIEOotXgIBbeYIAslq1wJww1wBk2UnndyIimJVgt4OP9zvQVcjcL/lzD8hqVBBkOSYwJ8w1
+        QFNICLfsZDtui1aHgL6Es/F/tmA2yDnQTkIEdXp3itJV+HKJUbdYHKBz9eq36AAjtrAwoL9x1EzMeGLi
+        U4mkTPGmtEb1XmBD7qcBjVqQNeZMStsPxspMuhiM5R26d8XmLI6EhIW20NDlDyMiggdjYmIEREfH0qaT
+        xHhs/fo0Ki4uChSKBdxkcrrRK2FltqRBGcYvzMek3Lq2JTs1z5i97YCYFvW2XEOG4m1s3jO5POy/zq2Q
+        kMCdpIJB0gbtRhJAej27iK8Tavdufactb8fT9oLd4Auj+kuo3b5hr3gu4UlychETQC7fyNcFgwgB9ep8
+        OsSLpddUkXy9TfPVRcyUpVWTCo27PwJ9StyTMsWqBfy5z5KSImnzF/Qq5PN1guCGJaBBszagLvsYXzNq
+        UuswY9OBNGhRfg630jdB5dZEEgDKtycI3hO6+2PP5fK1fI3FS/BFs+qLPzjT/J3QlrOdNk6BWxmbwaTZ
+        Ao3fbmLMsQD+QEWMv9I/1hIz0ilLq0oBjt+UMHm9EMxHUrkAZQr5IqwGBipiNOxSLLqdv6Wq6+TX4Lqg
+        hdHKQ/BPwwkBrotaMB/edoQuOw+rgYGKvnCV7tPYi3aBMS8FrD9mcMZdZ/ZAa34KuEtywVOZm4bN9QUq
+        YjgvZX3yqDhz2lWcBeM1RwWdE8avHoWJuuMwdFk95SzZ6/XD4gtUxKCNf3YVZ4K7TAndZ9NhrPowZ+6p
+        0IH9p2+Y68HLaqDHnsRqYKAihrNk3wd0gIFHpfs5Y4yhy6o+d1lmMFYDAxV90X8hS0qHePn42hFwl+aB
+        9Vw6WH5IA0pfwJjTX8MrwH5Y/YCK/nAWZ54euqJhDDtP7gTLqTSu+9Ga77yO8NlARf9I5rlKsr6n9Npp
+        8v2znXuqD57Cx/sHFf1xpckj1TdT98yVF8vcpUoY1udA843m6vImqu53g2MhNscfqOiLzk77ZzfNg5S+
+        iYK6tiFwlqjBUXEcKlsoIFqHfWSiv9+9A5vrC1QUYzAY5lsstksOxyOwPRxnzAh/txihxdTL3bvcj8Hj
+        mQCXa+gmVgcDFcXQnef39jqY4sPUBFQ0vza82joMVcbX1/XtI8xzloEB9yGslhhU5NPd3b2U7v4FRY1z
+        xe/2jEHbPQ+c1TvhXLkTzNZRsNMrww8wPDw2jdUTg4p8LBb7Zqu1jylK7++MAb0S5+tdUHpzRhOPoa+j
+        sJp8UJGPxWLVsst///4AV9zhGoeMMzZQFfUANTITgD+mv38wD6vJBxX53L1rW9HV1WNyu0eeP3jgfElv
+        xRTBYB6azvmlBwh3rNQ0q7Nj6PEjFEUtwWrOAJJ/AdNGClJuZiXzAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="b_exit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
