--- a/design_dance/f_signup.resx
+++ b/design_dance/f_signup.resx
@@ -8123,6 +8123,24 @@
         d6yRn1PPz2jG/x/bdDwesfv+zwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="b_back.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH4wINCQwmpce5TwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJYSURBVFhH
+        7dbfa81xHMfxw+ZiCot2hslyRUp+35hlMUJJbkhygfwoTYmoxZWUUVxIuXErP3KBRk35UWilJPOzKJEa
+        8z8cz9dnr319z843nZ/fdrFXPTrfz/vz/fzY2Tmf78mMZ8wml8stwGw30w0Lr8RPfEGry+mEBZfhOzqw
+        HV8xz921DQvpL/+Bdrfr8RLd4YZahkWWQot3uF2H67iB+nBTrcICKxD95QrXN/EH3TiZ4DimoxUnXIvb
+        g81o9pTJ4YaCxRXaWvjcf5xFM+bHanGXoHdPn6cX2Oap80PHEHa4WfUw9wS04ymeIOuu4VDYi09ocSmE
+        9ip0VqANMz1dCO0uFH6rKOxDtAletesB/MatMvXiG/qxKSxEuN6Jt5ji0nAojGwinH686v/7DofDDWWG
+        8TpP3qDHJdUu4oKb/0JRm/iI+CY+YHe4ocwwfjIe46jb06APfuFRTzHaBBYjOhsqCXM0Qcf7LLf1LnSF
+        ztGhQ5v4DC3e6XLFYa7zOObrtegNHUmhU8+BNW5WJcy3AXd8PQfvQ0daYcEleObrBgyGjrTCghtx29dz
+        MRA60goL6ng+4uv1uBc60giLtUDfgia3L+NQ6Kx1WKgROhEPuj0D2kz+c6HaYQH9ptgKfaVPuaz6VZxx
+        s7gwYBceJXiALPTsj9efYxB9aPM0mmc/XqHBpeLCgCs4jeWj6JfUROhtjtcXYaqHa7zu0XidsnlP3qLC
+        IG2g5GcCYyZhC17jLhrdVVoYqA3cR9KvnyTX8BC//LrOU5UXJliIAyXQUb4a0b9hPGMwmcxf5aTJQKR/
+        MMwAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="i_siger.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAGgsAABDFCAYAAACpyQhjAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
